crates/walrus-parser/snapshots/string_lit.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got

---
Ok(
    (
        [],
        String(
            String {
                span: 0..8,
                text: "\"abcdef\"",
            },
        ),
    ),
)
