crates/walrus-parser/snapshots/struct_expr.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got

---
Ok(
    (
        [],
        Struct(
            StructExpr {
                name: Var(
                    Ident {
                        span: 0..3,
                        text: "Foo",
                    },
                ),
                fields: Delimited {
                    open: LCurly {
                        span: 4..5,
                    },
                    inner: Punctuated0 {
                        first: Some(
                            FieldInit {
                                name: Var(
                                    Ident {
                                        span: 5..6,
                                        text: "x",
                                    },
                                ),
                                expr: Some(
                                    (
                                        Colon {
                                            span: 6..7,
                                        },
                                        Lit(
                                            Int(
                                                Dec(
                                                    DecInt {
                                                        span: 8..9,
                                                        text: "1",
                                                    },
                                                ),
                                            ),
                                        ),
                                    ),
                                ),
                            },
                        ),
                        tail: [
                            (
                                Comma {
                                    span: 9..10,
                                },
                                FieldInit {
                                    name: Var(
                                        Ident {
                                            span: 11..12,
                                            text: "y",
                                        },
                                    ),
                                    expr: Some(
                                        (
                                            Colon {
                                                span: 12..13,
                                            },
                                            Lit(
                                                Int(
                                                    Dec(
                                                        DecInt {
                                                            span: 14..15,
                                                            text: "2",
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ),
                                    ),
                                },
                            ),
                        ],
                        trail: None,
                    },
                    close: RCurly {
                        span: 15..16,
                    },
                },
            },
        ),
    ),
)
