crates/walrus-parser/snapshots/true_expr.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Lit(
            Bool(
                True(
                    KwTrue {
                        span: 0..4,
                    },
                ),
            ),
        ),
    ),
)
