crates/walrus-parser/snapshots/true_lit.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Bool(
            True(
                KwTrue {
                    span: 0..4,
                },
            ),
        ),
    ),
)
