crates/walrus-parser/snapshots/tuple1_pat.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Tuple(
            Delimited {
                open: LParen {
                    span: 0..1,
                },
                inner: Punctuated0 {
                    first: Some(
                        Var(
                            Var(
                                Ident {
                                    span: 1..2,
                                    text: "x",
                                },
                            ),
                        ),
                    ),
                    tail: [],
                    trail: Some(
                        Comma {
                            span: 2..3,
                        },
                    ),
                },
                close: RParen {
                    span: 3..4,
                },
            },
        ),
    ),
)
