crates/walrus-parser/snapshots/tuple2_pat.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Tuple(
            Delimited {
                open: LParen {
                    span: 0..1,
                },
                inner: Punctuated0 {
                    first: Some(
                        Var(
                            Var(
                                Ident {
                                    span: 1..2,
                                    text: "x",
                                },
                            ),
                        ),
                    ),
                    tail: [
                        (
                            Comma {
                                span: 2..3,
                            },
                            Var(
                                Var(
                                    Ident {
                                        span: 3..4,
                                        text: "y",
                                    },
                                ),
                            ),
                        ),
                    ],
                    trail: None,
                },
                close: RParen {
                    span: 4..5,
                },
            },
        ),
    ),
)
