crates/walrus-parser/snapshots/tuple2_type.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Tuple(
            Delimited {
                open: LParen {
                    span: 0..1,
                },
                inner: Punctuated0 {
                    first: Some(
                        Var(
                            Var(
                                Ident {
                                    span: 1..2,
                                    text: "T",
                                },
                            ),
                        ),
                    ),
                    tail: [
                        (
                            Comma {
                                span: 2..3,
                            },
                            Var(
                                Var(
                                    Ident {
                                        span: 3..4,
                                        text: "V",
                                    },
                                ),
                            ),
                        ),
                    ],
                    trail: None,
                },
                close: RParen {
                    span: 4..5,
                },
            },
        ),
    ),
)
