crates/walrus-parser/snapshots/var_pat.snap
---
source: crates/walrus-parser/src/grammar.rs
expression: got
---
Ok(
    (
        [],
        Var(
            Var(
                Ident {
                    span: 0..1,
                    text: "a",
                },
            ),
        ),
    ),
)
